// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> renders text 1`] = `
<div>
  <span
    class="sc-aXZVg kjTYXy"
  >
    A simple text
  </span>
</div>
`;

exports[`<Text /> renders text with fontSize 1`] = `
<div>
  <span
    class="sc-aXZVg dLruZo"
  >
    A large text
  </span>
</div>
`;

exports[`<Text /> renders text with fontWeight 1`] = `
<div>
  <span
    class="sc-aXZVg guVrFZ"
  >
    A bold text
  </span>
</div>
`;

exports[`<Text /> renders text with variant 1`] = `
<div>
  <span
    class="sc-aXZVg fygWxK"
  >
    A colored text
  </span>
</div>
`;
